# sarmal

./: .gitignore  MANIFEST.in  README.md  abccc.py  codecov.yml  ekmek.py  pyproject.toml  setup.py
.github/: label_to_devs.yml  labeler.py  labeler.yml  pull_request_template.md  pypi-release.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/scripts/: assign_reviewers.py  cc_issue.py  comment_issue.py
.github/workflows/: asignee.yml  asigner.yml  assign_labels.yml  cc-issue.yml  ci-test.yaml  comment_issues.yml  label.yml  pr-label-and-assign.yml  speed_benchmark.yaml
mithril/: __init__.py
mithril/backends/: backend.py
mithril/backends/with_autograd/jax_backend/: backend.py  parallel.py
mithril/backends/with_autograd/mlx_backend/: utils.py
mithril/framework/: constraints.py
mithril/framework/codegen/: __init__.py  c_ast.py  code_gen.py  python_gen.py
mithril/framework/logical/: base.py  essential_primitives.py
mithril/framework/physical/: data_store.py  flat_graph.py
mithril/models/: models.py  primitives.py
src/sarmal/: example.py
src/sarmal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/scripts/: test_models.py  test_parallel.py  test_randomized_models_all_backends.py  test_scripts.py  test_shapes.py
