[project]
name = "sarmal"
version = "0.0.1"
authors = [
  { name="Mehmet Oktay Ozsoy", email="mehmet.ozsoy@synnada.ai" },
]
description = "Composite ML Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/synnada-ai/sarmal"
Issues = "https://github.com/synnada-ai/sarmal/issues"